Version 1.2.x - x xxx 2008

  * Add PHP interface.
    Ticket #51.

  * Add JAVA interface.
    Ticket #52.


Version 1.2.0 - x xxx 2008

  * Add "streaming" enhancement. This enhancement improves performance
    for larger fetches at expense of risking timeouts with the RETS server.
    This enhancement moves a significant portion of the search and retrieval
    logic into the SearchResultSet logic. As a result, when the SearchResultSet
    is first returned, it may not have retrieved any data from the RETS server.
    You can only be assured that at least one row has been retrieved by
    calling SearchResultSet::HasNext().
    Ticket #41.

Version 1.1.12 - 6 May 2008

  * Extend XML parsing for metadata to include ISO characters if specified.
    Ticket #54.

Version 1.1.11 - 1 Apr 2008

  * Add SWIG bindings to Autoconf based (unix) build.
    Ticket #31.
  * Do not log GetObject requests by default and provide new method 
    RetsSession::SetLogEverything() to override the new default.
    Ticket #36.
  * Expose SqlToDmqlCompiler to C#.
    Ticket #42.
  * Handle changes to curl-config in curl 7.17.x and later.
    Ticket #46.
  * Add MetadataTable::GetMinimumAsString() and GetMaximumAsString().
    Ticket #47.
  * Remove std_string.i and std_vector.i from swig to allow for
    default versions to be used.
    Ticket #49.
  * SqlToDmqlCompiler now accepts a ? as a value in a WHERE clause.
    Ticket #48  Not complete, as you cannot yet take action on that.

Version 1.1.10 - 21 Dec 2007

  * For a SearchRequest, StandardNames now defaults to false.
  * SearchResult/RetsHttpRequest.GetQueryString() is now exposed to the
    swig supported languages.
  * Added build options of enable-PIC and enable-shared_dependencies to help
    with ezRETS on x86_64 on Linux.
  * Fix build bug where --enable-sql-compiler actually disabled it.
  * Add support for extended error messages to RetsException. Ticket #34.