@@ -437,17 +437,13 @@ JAVA_SOURCES		= ${wildcard ${JAVA_OBJ_DIR}/*.java}
 JAVA_SRC_DIR		= ${SWIG_DIR}/java
 JAVA_WRAP 		= ${JAVA_OBJ_DIR}/librets_wrap.cpp
 
-JAVA_INCLUDES		= ${BOOST_CFLAGS}
-
 ifeq (${SWIG_OSNAME}, darwin)
 JAVA_CLASSPATH		= `javaconfig DefaultClasspath`:${JAVA_OBJ_DIR}/${JAVA_JAR}
-JAVA_INCLUDES		= -I`javaconfig Headers`
 JAVA_DLL		= ${JAVA_OBJ_DIR}/liblibrets.jnilib
 #JAVA_DYNAMICLINK	= ${CXX} -dynamiclib -framework JavaVM
 JAVA_DYNAMICLINK	= ${SWIG_LINK}
 else
-JAVA_CLASSPATH		= `echo You must provide JAVA_CLASSPATH`
-JAVA_INCLUDES		= `echo You must provide JAVA_INCLUDES`
+JAVA_CLASSPATH		= ${JAVA_OBJ_DIR}/${JAVA_JAR}
 JAVA_DLL		= ${JAVA_OBJ_DIR}/liblibrets.so
 JAVA_DYNAMICLINK	= ${SWIG_LINK}
 endif
